# BSPraktikum25

./: .gitignore  CMakeLists.txt  keyValStore.c  keyValStore.h  main.c  main.h  sub.c  sub.h
